# mpa-builder

./: Cargo.toml  README.md  install.sh
init_template/: layout.html
init_template/intl/: en.json  fi_default.json
init_template/pages/: about.html  index.html
init_template/scripts/: base.js  base.ts
src/: main.rs  refresh_server.rs  websocket_server.rs
