[package]
name = "mpa-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
dialoguer = "0.10.2"
glob = "0.3.0"
mustache = "0.9.0"
rust-embed = "6.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
